Adding Event Page

--- a/Men Of Varna.csproj
+++ b/Men Of Varna.csproj
@@ -26,4 +26,10 @@
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="Views\Feedback\" />
+    <Folder Include="Views\Shop\" />
+  </ItemGroup>
+
 </Project>
