Expanded Controllers and View models + Seeded Every Table in the Database

--- a/Men Of Varna.csproj
+++ b/Men Of Varna.csproj
@@ -28,7 +28,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="Views\Feedback\" />
+    <Folder Include="Models\Store\" />
     <Folder Include="Views\Shop\" />
   </ItemGroup>
 
